# tiralabra

./: .coverage  .pylintrc  README.md  pyproject.toml
dokumentaatio/: kaytto-ohje.md  maarittely.md  testaus.md  toteutus.md  viikkoraportti1.md  viikkoraportti2.md  viikkoraportti3.md  viikkoraportti4.md  viikkoraportti5.md  viikkoraportti6.md
src/: console_io.py  dictionary.py  index.py  levenshtein.py  spell_corrector.py  summa.py  trienode.py
src/entities/: levenshtein.py  trienode.py
src/services/: spell_corrector.py
src/tests/: dictionary_test.py  levenshtein_test.py  spell_corrector_test.py  summa_test.py  trienode_test.py
src/ui/: ui.py
