[tool.poetry]
name = "tiralabra"
version = "0.1.0"
description = ""
authors = ["Oskari Heinonen <oskari.l.heinonen@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
